Improve the test a bit.